--- a/dev_env/evaluation.ipynb
+++ b/dev_env/evaluation.ipynb
@@ -12,6 +12,7 @@
    "outputs": [],
    "source": [
     "# 🎯 MODEL EVALUATION SCRIPT \n",
+    "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
     "import pandas as pd\n",
@@ -21,11 +22,10 @@
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import StructType, StructField, StringType, DoubleType, TimestampType\n",
-    "from delta.tables import DeltaTable\n",
     "from typing import Dict, List\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🎯 MODEL EVALUATION PIPELINE — UNIQUE ENTRIES ONLY\")\n",
+    "print(\"🎯 MODEL EVALUATION PIPELINE — UNIQUE EXPERIMENTS ONLY\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# -------------------------\n",
@@ -129,26 +129,26 @@
     "\n",
     "\n",
     "# -------------------------\n",
-    "# CHECK IF ALREADY LOGGED\n",
+    "# CHECK IF ALREADY LOGGED (BASED ON RUN_NAME)\n",
     "# -------------------------\n",
     "\n",
-    "def get_existing_run_ids() -> set:\n",
-    "    \"\"\"Get all run_ids already in the evaluation table\"\"\"\n",
+    "def get_existing_run_names() -> set:\n",
+    "    \"\"\"Get all run_names already in the evaluation table\"\"\"\n",
     "    try:\n",
     "        existing_df = spark.sql(f\"\"\"\n",
-    "            SELECT DISTINCT run_id \n",
+    "            SELECT DISTINCT run_name \n",
     "            FROM {config.EVALUATION_LOG_TABLE}\n",
     "        \"\"\")\n",
-    "        existing_ids = set([row.run_id for row in existing_df.collect()])\n",
-    "        print(f\"📊 Found {len(existing_ids)} existing entries in evaluation table\")\n",
-    "        return existing_ids\n",
+    "        existing_names = set([row.run_name for row in existing_df.collect()])\n",
+    "        print(f\"📊 Found {len(existing_names)} unique experiments in evaluation table\")\n",
+    "        return existing_names\n",
     "    except:\n",
     "        print(\"📊 No existing entries found (new table)\")\n",
     "        return set()\n",
     "\n",
     "\n",
     "# -------------------------\n",
-    "# 3️⃣ Fetch Runs\n",
+    "# 3️⃣ Fetch Runs (BY UNIQUE RUN_NAME)\n",
     "# -------------------------\n",
     "\n",
     "def get_recent_runs():\n",
@@ -159,40 +159,68 @@
     "    runs = client.search_runs(\n",
     "        [experiment.experiment_id],\n",
     "        order_by=[order],\n",
-    "        max_results=config.RECENT_N\n",
+    "        max_results=500  # Fetch more to ensure we get all experiments\n",
     "    )\n",
     "\n",
     "    if not runs:\n",
     "        print(\"⚠ No model runs found.\")\n",
     "        return []\n",
     "\n",
-    "    # Get existing run_ids to filter out duplicates\n",
-    "    existing_run_ids = get_existing_run_ids()\n",
+    "    # 🔥 Get existing run_names (not run_ids) to filter out duplicates\n",
+    "    existing_run_names = get_existing_run_names()\n",
     "\n",
-    "    run_list = []\n",
+    "    run_dict = {}  # Use dict to keep only best version of each experiment\n",
     "    skipped_count = 0\n",
     "\n",
     "    for run in runs:\n",
-    "        run_id = run.info.run_id\n",
+    "        run_name = run.info.run_name or \"unnamed_run\"\n",
     "        \n",
-    "        # 🔥 Skip if already logged\n",
-    "        if run_id in existing_run_ids:\n",
+    "        # 🔥 Skip if already logged in table\n",
+    "        if run_name in existing_run_names:\n",
     "            skipped_count += 1\n",
     "            continue\n",
+    "        \n",
+    "        # 🔥 Keep only the BEST run for each experiment name\n",
+    "        primary_metric_val = run.data.metrics.get(config.PRIMARY_METRIC)\n",
+    "        \n",
+    "        if run_name not in run_dict:\n",
+    "            # First time seeing this experiment\n",
+    "            run_dict[run_name] = {\n",
+    "                \"run_id\": run.info.run_id,\n",
+    "                \"run_name\": run_name,\n",
+    "                \"primary_metric\": primary_metric_val,\n",
+    "                \"all_metrics\": {m: run.data.metrics.get(m) for m in config.TRACKED_METRICS if m in run.data.metrics},\n",
+    "                \"params\": run.data.params,\n",
+    "                \"model_uri\": f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\",\n",
+    "                \"timestamp\": datetime.fromtimestamp(run.info.start_time / 1000),\n",
+    "            }\n",
+    "        else:\n",
+    "            # We've seen this experiment before, keep the better one\n",
+    "            if config.DIRECTION == \"maximize\":\n",
+    "                if primary_metric_val > run_dict[run_name][\"primary_metric\"]:\n",
+    "                    run_dict[run_name] = {\n",
+    "                        \"run_id\": run.info.run_id,\n",
+    "                        \"run_name\": run_name,\n",
+    "                        \"primary_metric\": primary_metric_val,\n",
+    "                        \"all_metrics\": {m: run.data.metrics.get(m) for m in config.TRACKED_METRICS if m in run.data.metrics},\n",
+    "                        \"params\": run.data.params,\n",
+    "                        \"model_uri\": f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\",\n",
+    "                        \"timestamp\": datetime.fromtimestamp(run.info.start_time / 1000),\n",
+    "                    }\n",
+    "            else:  # minimize\n",
+    "                if primary_metric_val < run_dict[run_name][\"primary_metric\"]:\n",
+    "                    run_dict[run_name] = {\n",
+    "                        \"run_id\": run.info.run_id,\n",
+    "                        \"run_name\": run_name,\n",
+    "                        \"primary_metric\": primary_metric_val,\n",
+    "                        \"all_metrics\": {m: run.data.metrics.get(m) for m in config.TRACKED_METRICS if m in run.data.metrics},\n",
+    "                        \"params\": run.data.params,\n",
+    "                        \"model_uri\": f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\",\n",
+    "                        \"timestamp\": datetime.fromtimestamp(run.info.start_time / 1000),\n",
+    "                    }\n",
     "\n",
-    "        metrics = {m: run.data.metrics.get(m) for m in config.TRACKED_METRICS if m in run.data.metrics}\n",
-    "\n",
-    "        run_list.append({\n",
-    "            \"run_id\": run_id,\n",
-    "            \"run_name\": run.info.run_name or \"unnamed_run\",\n",
-    "            \"primary_metric\": run.data.metrics.get(config.PRIMARY_METRIC),\n",
-    "            \"all_metrics\": metrics,\n",
-    "            \"params\": run.data.params,\n",
-    "            \"model_uri\": f\"runs:/{run_id}/{config.ARTIFACT_PATH}\",\n",
-    "            \"timestamp\": datetime.fromtimestamp(run.info.start_time / 1000),\n",
-    "        })\n",
-    "\n",
-    "    print(f\"📌 {len(run_list)} NEW runs to log (Skipped {skipped_count} already logged)\")\n",
+    "    run_list = list(run_dict.values())\n",
+    "    print(f\"📌 {len(run_list)} NEW unique experiments to log (Skipped {skipped_count} already in table)\")\n",
     "    return run_list\n",
     "\n",
     "\n",
@@ -202,10 +230,10 @@
     "\n",
     "def log_results(run_list):\n",
     "    if not run_list:\n",
-    "        print(\"\\n✅ No new runs to log (all already exist)\")\n",
+    "        print(\"\\n✅ No new experiments to log (all already exist)\")\n",
     "        return\n",
     "\n",
-    "    print(f\"\\n📝 Logging {len(run_list)} new evaluation results...\")\n",
+    "    print(f\"\\n📝 Logging {len(run_list)} unique experiments...\")\n",
     "\n",
     "    records = []\n",
     "    for run in run_list:\n",
@@ -225,9 +253,9 @@
     "    spark_df = spark.createDataFrame(df, schema=get_evaluation_table_schema())\n",
     "\n",
     "    try:\n",
-    "        # Append only new records\n",
+    "        # Append only new unique experiments\n",
     "        spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
-    "        print(f\"✅ Successfully logged {len(run_list)} new entries\")\n",
+    "        print(f\"✅ Successfully logged {len(run_list)} unique experiments\")\n",
     "    except Exception as e:\n",
     "        print(f\"❌ Failed to log results: {e}\")\n",
     "\n",
@@ -238,11 +266,11 @@
     "\n",
     "def show_summary(run_list):\n",
     "    if not run_list:\n",
-    "        print(\"\\n📊 No new runs to display\")\n",
+    "        print(\"\\n📊 No new experiments to display\")\n",
     "        return\n",
     "\n",
-    "    print(\"\\n📊 NEWLY LOGGED MODEL RESULTS:\\n\")\n",
-    "    for rank, run in enumerate(run_list[:10], 1):\n",
+    "    print(\"\\n📊 NEWLY LOGGED UNIQUE EXPERIMENTS:\\n\")\n",
+    "    for rank, run in enumerate(run_list, 1):\n",
     "        pm_val = run['primary_metric']\n",
     "        print(f\"{rank}. {run['run_name']} → {config.PRIMARY_METRIC}: {pm_val:.4f if pm_val else 0.0}\")\n",
     "\n",
@@ -256,9 +284,11 @@
     "    print(\"\\n📋 ALL UNIQUE EXPERIMENTS IN EVALUATION TABLE:\\n\")\n",
     "    \n",
     "    try:\n",
+    "        # 🔥 FIX: Select DISTINCT run_name to show only unique experiments\n",
     "        all_runs = spark.sql(f\"\"\"\n",
-    "            SELECT DISTINCT run_name, primary_metric_value, timestamp\n",
+    "            SELECT run_name, primary_metric_value, MAX(timestamp) as latest_timestamp\n",
     "            FROM {config.EVALUATION_LOG_TABLE}\n",
+    "            GROUP BY run_name, primary_metric_value\n",
     "            ORDER BY primary_metric_value DESC\n",
     "        \"\"\")\n",
     "        \n",
@@ -281,7 +311,7 @@
     "    # Ensure table exists\n",
     "    ensure_table_exists()\n",
     "    \n",
-    "    # Fetch new runs (excluding already logged)\n",
+    "    # Fetch new unique experiments (excluding already logged)\n",
     "    run_list = get_recent_runs()\n",
     "    \n",
     "    # Log new results\n",
