--- a/uat_env/uat_inference.ipynb
+++ b/uat_env/uat_inference.ipynb
@@ -19,7 +19,7 @@
     }
    ],
    "source": [
-    "# 🧪 UAT MODEL INFERENCE - FIXED FOR RAW DATA\n",
+    "# 🧪 UAT MODEL INFERENCE \n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
@@ -319,7 +319,7 @@
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
-    "# STEP 6: STORE RESULTS (NO DUPLICATES)\n",
+    "# STEP 6: STORE RESULTS (NO DUPLICATES - DELETE OLD + INSERT NEW)\n",
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def log_results(version, run_id, metrics, status, failed_checks):\n",
@@ -328,14 +328,36 @@
     "\n",
     "    version_str = str(version)\n",
     "    \n",
-    "    # 🔥 Check if already logged\n",
-    "    if is_version_already_logged(version_str):\n",
-    "        print(f\"⚠️ UAT results for version {version_str} already exist in table\")\n",
-    "        print(\"   Skipping duplicate entry...\")\n",
-    "        return\n",
+    "    from pyspark.sql.types import StructType, StructField, StringType, DoubleType, TimestampType\n",
     "\n",
-    "    from delta.tables import DeltaTable\n",
+    "    # 🔥 Define fixed schema with all required columns\n",
+    "    uat_schema = StructType([\n",
+    "        StructField(\"timestamp\", TimestampType(), True),\n",
+    "        StructField(\"model_name\", StringType(), True),\n",
+    "        StructField(\"model_type\", StringType(), True),\n",
+    "        StructField(\"model_version\", StringType(), True),\n",
+    "        StructField(\"run_id\", StringType(), True),\n",
+    "        StructField(\"uat_status\", StringType(), True),\n",
+    "        StructField(\"accuracy\", DoubleType(), True),\n",
+    "        StructField(\"precision\", DoubleType(), True),\n",
+    "        StructField(\"recall\", DoubleType(), True),\n",
+    "        StructField(\"f1\", DoubleType(), True),\n",
+    "        StructField(\"roc_auc\", DoubleType(), True),\n",
+    "        StructField(\"confusion_matrix_json\", StringType(), True),\n",
+    "        StructField(\"failed_checks_json\", StringType(), True)\n",
+    "    ])\n",
     "\n",
+    "    # 🔥 DELETE existing records for this version (if any)\n",
+    "    try:\n",
+    "        deleted_count = spark.sql(f\"\"\"\n",
+    "            DELETE FROM {config.UAT_RESULTS_TABLE}\n",
+    "            WHERE model_version = '{version_str}'\n",
+    "        \"\"\")\n",
+    "        print(f\"🧹 Deleted old entries for version {version_str}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"ℹ️ No old entries to delete (table might be new): {e}\")\n",
+    "\n",
+    "    # Prepare new result\n",
     "    result = {\n",
     "        \"timestamp\": datetime.now(),\n",
     "        \"model_name\": config.MODEL_NAME,\n",
@@ -352,14 +374,15 @@
     "        \"failed_checks_json\": json.dumps(failed_checks) if failed_checks else None\n",
     "    }\n",
     "\n",
-    "    df = spark.createDataFrame(pd.DataFrame([result]))\n",
+    "    df = spark.createDataFrame(pd.DataFrame([result]), schema=uat_schema)\n",
     "\n",
+    "    # 🔥 Insert new record\n",
     "    try:\n",
-    "        DeltaTable.forName(spark, config.UAT_RESULTS_TABLE)\n",
-    "        df.write.option(\"mergeSchema\", \"true\").mode(\"append\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
+    "        df.write.format(\"delta\").mode(\"append\").option(\"mergeSchema\", \"true\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
     "        print(f\"✅ UAT results logged for version {version_str}\")\n",
-    "    except:\n",
-    "        df.write.mode(\"overwrite\").option(\"overwriteSchema\", \"true\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
+    "    except Exception as e:\n",
+    "        # If table doesn't exist, create it\n",
+    "        df.write.format(\"delta\").mode(\"overwrite\").option(\"overwriteSchema\", \"true\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
     "        print(f\"✅ UAT results table created and logged for version {version_str}\")\n",
     "\n",
     "    print(\"📌 Results logged successfully.\")\n",
