--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# 🎯 MODEL REGISTRATION SCRIPT - FIXED (DATA TYPE + DUPLICATE PREVENTION)\n",
+    "# 🎯 MODEL REGISTRATION SCRIPT \n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
@@ -106,7 +106,7 @@
     "\n",
     "# ---------------------- TABLE SCHEMA (FIXED) ----------------------\n",
     "def get_table_schema():\n",
-    "\n",
+    "    \"\"\"Define fixed schema for registration log table\"\"\"\n",
     "    return StructType([\n",
     "        StructField(\"timestamp\", TimestampType(), True),\n",
     "        StructField(\"run_id\", StringType(), True),\n",
@@ -117,14 +117,14 @@
     "        StructField(\"metrics_json\", StringType(), True),\n",
     "        StructField(\"params_json\", StringType(), True),\n",
     "        StructField(\"registered\", BooleanType(), True),\n",
-    "        StructField(\"registered_version\", StringType(), True),\n",
+    "        StructField(\"registered_version\", StringType(), True),  # 🔥 FIX: Always STRING, never NULL\n",
     "        StructField(\"reason\", StringType(), True)\n",
     "    ])\n",
     "\n",
     "\n",
     "# ---------------------- TABLE CREATION ----------------------\n",
     "def ensure_table_exists():\n",
-    "\n",
+    "    \"\"\"Create table if not exists with correct schema\"\"\"\n",
     "    try:\n",
     "        spark.sql(f\"DESCRIBE TABLE {config.REGISTRATION_LOG_TABLE}\")\n",
     "        print(f\"📌 Table exists: {config.REGISTRATION_LOG_TABLE}\")\n",
@@ -138,12 +138,10 @@
     "\n",
     "# ---------------------- FETCH RUNS ----------------------\n",
     "def get_all_runs() -> List[Dict]:\n",
-    "\n",
     "    print(\"\\n📍 Fetching experiment runs...\")\n",
-    "\n",
     "    runs = client.search_runs(\n",
-    "        [experiment.experiment_id],\n",
-    "        order_by=[f\"metrics.{config.PRIMARY_METRIC} DESC\"],\n",
+    "        [experiment.experiment_id], \n",
+    "        order_by=[f\"metrics.{config.PRIMARY_METRIC} DESC\"], \n",
     "        max_results=500\n",
     "    )\n",
     "\n",
@@ -159,7 +157,7 @@
     "\n",
     "# ---------------------- DUPLICATE CHECK ----------------------\n",
     "def is_duplicate_model(new_model: Dict) -> bool:\n",
-    "\n",
+    "    \"\"\"Check if model already registered\"\"\"\n",
     "    if not config.DUPLICATE_CHECK_ENABLED:\n",
     "        return False\n",
     "\n",
@@ -169,40 +167,42 @@
     "        return False\n",
     "\n",
     "    for version in versions:\n",
-    "        run = client.get_run(version.run_id)\n",
+    "        try:\n",
+    "            run = client.get_run(version.run_id)\n",
     "\n",
-    "        metrics_match = all(\n",
-    "            abs((run.data.metrics.get(m) or 0) - (new_model[\"metrics\"].get(m) or 0)) <= config.TOLERANCE\n",
-    "            for m in config.METRICS_TO_COMPARE\n",
-    "        )\n",
+    "            metrics_match = all(\n",
+    "                abs((run.data.metrics.get(m) or 0) - (new_model[\"metrics\"].get(m) or 0)) <= config.TOLERANCE\n",
+    "                for m in config.METRICS_TO_COMPARE\n",
+    "            )\n",
     "\n",
-    "        if metrics_match and run.data.params == new_model[\"params\"]:\n",
-    "            print(f\"   ⚠ Duplicate detected → Matches v{version.version}\")\n",
-    "            return True\n",
+    "            if metrics_match and run.data.params == new_model[\"params\"]:\n",
+    "                print(f\"   ⚠ Duplicate detected → Matches v{version.version}\")\n",
+    "                return True\n",
+    "        except:\n",
+    "            continue\n",
     "\n",
     "    return False\n",
     "\n",
     "\n",
     "# ---------------------- CHECK IF ALREADY LOGGED ----------------------\n",
     "def is_already_logged(run_id: str) -> bool:\n",
-    "\n",
+    "    \"\"\"Check if run_id already exists in registration log table\"\"\"\n",
     "    try:\n",
     "        existing = spark.sql(f\"\"\"\n",
     "            SELECT run_id \n",
-    "            FROM {config.REGISTRATION_LOG_TABLE}\n",
+    "            FROM {config.REGISTRATION_LOG_TABLE} \n",
     "            WHERE run_id = '{run_id}'\n",
     "            LIMIT 1\n",
     "        \"\"\").count()\n",
-    "\n",
+    "        \n",
     "        return existing > 0\n",
-    "\n",
     "    except:\n",
     "        return False\n",
     "\n",
     "\n",
     "# ---------------------- REGISTER MODEL ----------------------\n",
     "def register_model(model: Dict):\n",
-    "\n",
+    "    \"\"\"Register model to Unity Catalog\"\"\"\n",
     "    if is_duplicate_model(model):\n",
     "        return None\n",
     "\n",
@@ -211,27 +211,31 @@
     "    version = reg.version\n",
     "\n",
     "    try:\n",
+    "        # Add tags\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_id\", model[\"run_id\"])\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_name\", model[\"run_name\"])\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", config.PRIMARY_METRIC)\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric_value\", str(round(model[\"primary_metric\"], 4)))\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"registered_timestamp\", datetime.now().isoformat())\n",
-    "    except:\n",
-    "        pass\n",
+    "    except Exception as e:\n",
+    "        print(f\"   ⚠ Failed to set tags: {e}\")\n",
     "\n",
     "    print(f\"   ✅ Registered as version: {version}\")\n",
     "    return version\n",
     "\n",
     "\n",
-    "# ---------------------- LOG DECISION (MERGE UNIQUE) ----------------------\n",
+    "# ---------------------- LOG DECISION ----------------------\n",
     "def log_decision(model, registered, version, reason):\n",
-    "\n",
+    "    \"\"\"Log registration decision to Delta table\"\"\"\n",
+    "    \n",
+    "    # 🔥 FIX: Check if already logged to prevent duplicates\n",
     "    if is_already_logged(model[\"run_id\"]):\n",
     "        print(f\"   ℹ️ Already logged in table, skipping duplicate entry\")\n",
     "        return\n",
-    "\n",
+    "    \n",
+    "    # 🔥 FIX: Convert version to string, use \"N/A\" if None\n",
     "    version_str = str(version) if version is not None else \"N/A\"\n",
-    "\n",
+    "    \n",
     "    record = {\n",
     "        \"timestamp\": datetime.now(),\n",
     "        \"run_id\": model[\"run_id\"],\n",
@@ -242,58 +246,52 @@
     "        \"metrics_json\": json.dumps(model[\"metrics\"]),\n",
     "        \"params_json\": json.dumps(model[\"params\"]),\n",
     "        \"registered\": registered,\n",
-    "        \"registered_version\": version_str,\n",
+    "        \"registered_version\": version_str,  # 🔥 Always string, never None\n",
     "        \"reason\": reason\n",
     "    }\n",
     "\n",
     "    df = pd.DataFrame([record])\n",
     "    spark_df = spark.createDataFrame(df, schema=get_table_schema())\n",
     "\n",
-    "    from delta.tables import DeltaTable\n",
-    "\n",
-    "    ensure_table_exists()\n",
-    "\n",
     "    try:\n",
-    "        delta_table = DeltaTable.forName(spark, config.REGISTRATION_LOG_TABLE)\n",
-    "\n",
-    "        delta_table.alias(\"t\").merge(\n",
-    "            spark_df.alias(\"s\"),\n",
-    "            \"t.run_id = s.run_id AND t.model_name = s.model_name\"\n",
-    "        ).whenNotMatchedInsertAll().execute()\n",
-    "\n",
-    "        print(f\"   📄 Logged uniquely to: {config.REGISTRATION_LOG_TABLE}\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"   ⚠ Merge failed, fallback append: {e}\")\n",
     "        spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
+    "        print(f\"   📄 Logged to: {config.REGISTRATION_LOG_TABLE}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"   ⚠ Failed to log: {e}\")\n",
     "\n",
     "\n",
     "# ---------------------- MAIN ----------------------\n",
     "def main():\n",
-    "\n",
     "    print(\"\\n🚀 Starting Model Registration Pipeline...\\n\")\n",
     "\n",
+    "    # Ensure table exists with correct schema\n",
     "    ensure_table_exists()\n",
     "\n",
     "    runs = get_all_runs()\n",
-    "    \n",
+    "    if not runs:\n",
+    "        print(\"❌ No runs found!\")\n",
+    "        return\n",
+    "\n",
     "    registered_count = 0\n",
     "    skipped_count = 0\n",
-    "    processed_run_ids = set()\n",
+    "    processed_run_ids = set()  # 🔥 Track processed runs to avoid duplicates\n",
     "\n",
     "    for idx, model in enumerate(runs, start=1):\n",
-    "\n",
-    "        if model[\"run_id\"] in processed_run_ids:\n",
+    "        \n",
+    "        # 🔥 Skip if already processed in this execution\n",
+    "        if model['run_id'] in processed_run_ids:\n",
     "            continue\n",
+    "        \n",
+    "        processed_run_ids.add(model['run_id'])\n",
     "\n",
-    "        processed_run_ids.add(model[\"run_id\"])\n",
-    "\n",
-    "        print(\"\\n\" + \"=\"*80)\n",
+    "        print(f\"\\n{'='*80}\")\n",
     "        print(f\"[{idx}/{len(runs)}] Processing: {model['run_name']}\")\n",
-    "        print(\"=\"*80)\n",
+    "        print(f\"   Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']:.4f}\")\n",
+    "        print(f\"{'='*80}\")\n",
     "\n",
-    "        if is_already_logged(model[\"run_id\"]):\n",
-    "            print(\"   ℹ️ Already logged, skipping...\")\n",
+    "        # Check if already logged to prevent duplicate entries\n",
+    "        if is_already_logged(model['run_id']):\n",
+    "            print(f\"   ℹ️ Already logged in previous run, skipping...\")\n",
     "            continue\n",
     "\n",
     "        version = register_model(model)\n",
@@ -307,13 +305,20 @@
     "            slack.send(f\"⚠ Duplicate skipped: {model['run_name']}\", \"warning\")\n",
     "            skipped_count += 1\n",
     "\n",
-    "    print(\"\\n🎉 REGISTRATION COMPLETE\")\n",
-    "    print(f\"✔ Registered: {registered_count}\")\n",
-    "    print(f\"⚠ Skipped: {skipped_count}\")\n",
+    "    print(\"\\n\" + \"=\"*80)\n",
+    "    print(\"🎉 REGISTRATION PIPELINE COMPLETED\")\n",
+    "    print(\"=\"*80)\n",
+    "    print(f\"✅ Models Registered: {registered_count}\")\n",
+    "    print(f\"⚠ Duplicates Skipped: {skipped_count}\")\n",
+    "    print(f\"📊 Total Processed: {len(runs)}\")\n",
+    "    print(f\"📦 Model Name: {config.MODEL_NAME}\")\n",
+    "    print(\"=\"*80)\n",
+    "\n",
+    "    slack.send(f\"📁 Registration complete: {registered_count} registered, {skipped_count} skipped\", \"info\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
