--- a/prod_env/prod_create_serving.ipynb
+++ b/prod_env/prod_create_serving.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🚀 PRODUCTION SERVING ENDPOINT - NEW WORKFLOW (CONFIG-DRIVEN)\n",
+    "# 🚀 PRODUCTION SERVING ENDPOINT \n",
     "\n",
     "from databricks.sdk import WorkspaceClient\n",
     "from databricks.sdk.service.serving import (\n",
@@ -28,8 +28,9 @@
     "print(\"🚀 PRODUCTION SERVING ENDPOINT (NEW WORKFLOW)\")\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "# ✅ LOAD PIPELINE CONFIGURATION\n",
-    "\n",
+    "# -----------------------------------------\n",
+    "# 1️⃣ Load Configuration\n",
+    "# -----------------------------------------\n",
     "print(\"\\n📋 Step 1: Loading configuration from pipeline_config.yml...\")\n",
     "\n",
     "try:\n",
@@ -47,15 +48,15 @@
     "\n",
     "except FileNotFoundError:\n",
     "    print(\"❌ ERROR: pipeline_config.yml not found!\")\n",
-    "    print(\"💡 Please ensure pipeline_config.yml is in the notebook directory\")\n",
     "    dbutils.notebook.exit(\"FAILURE\")\n",
     "except Exception as e:\n",
     "    print(f\"❌ ERROR loading configuration: {e}\")\n",
     "    traceback.print_exc()\n",
     "    dbutils.notebook.exit(\"FAILURE\")\n",
     "\n",
-    "# ================== CONFIGURATION CLASS ==================\n",
-    "\n",
+    "# -----------------------------------------\n",
+    "# 2️⃣ Config Class\n",
+    "# -----------------------------------------\n",
     "class Config:\n",
     "    def __init__(self):\n",
     "        MODEL_TYPE = pipeline_cfg[\"model\"][\"type\"]\n",
@@ -63,7 +64,6 @@
     "        UC_SCHEMA = pipeline_cfg[\"model\"][\"schema\"]\n",
     "        BASE_NAME = pipeline_cfg[\"model\"][\"base_name\"]\n",
     "\n",
-    "        # ✅ NEW: Use dynamic naming rule from YAML\n",
     "        self.MODEL_NAME = pipeline_cfg[\"model\"][\"naming\"][\"format\"].format(\n",
     "            catalog=UC_CATALOG,\n",
     "            schema=UC_SCHEMA,\n",
@@ -72,7 +72,6 @@
     "        )\n",
     "        self.MODEL_TYPE = MODEL_TYPE\n",
     "\n",
-    "        # ✅ NEW: Use config-driven endpoint naming template\n",
     "        endpoint_format = pipeline_cfg[\"serving\"][\"endpoint_name_format\"]\n",
     "        self.ENDPOINT_NAME = endpoint_format.format(\n",
     "            base_name=BASE_NAME.replace(\"_\", \"-\"),\n",
@@ -80,20 +79,16 @@
     "        )\n",
     "\n",
     "        self.PRODUCTION_ALIAS = pipeline_cfg[\"aliases\"][\"production\"]\n",
-    "        self.STAGING_ALIAS = pipeline_cfg[\"aliases\"][\"staging\"]\n",
     "\n",
     "        serving_cfg = pipeline_cfg.get(\"serving\", {})\n",
     "        self.WORKLOAD_SIZE = serving_cfg.get(\"workload_size\", \"Small\")\n",
     "        self.SCALE_TO_ZERO = serving_cfg.get(\"scale_to_zero_enabled\", True)\n",
-    "        self.MIN_PROVISIONED_THROUGHPUT = serving_cfg.get(\"min_provisioned_throughput\", 0)\n",
-    "        self.MAX_PROVISIONED_THROUGHPUT = serving_cfg.get(\"max_provisioned_throughput\", 0)\n",
     "\n",
-    "        self.WORKLOAD_TYPE = serving_cfg.get(\"workload_type\", \"CPU\")\n",
-    "        self.ENVIRONMENT_VARS = serving_cfg.get(\"environment_vars\", {})\n",
-    "\n",
+    "        # ⏳ NEW CONFIG VARIABLES FOR WAITING\n",
     "        self.DEPLOYMENT_TIMEOUT = serving_cfg.get(\"deployment_timeout\", 1800)\n",
     "        self.STATUS_CHECK_INTERVAL = serving_cfg.get(\"status_check_interval\", 15)\n",
     "\n",
+    "        # Slack\n",
     "        self.SLACK_ENABLED = pipeline_cfg[\"notifications\"][\"enabled\"]\n",
     "        self.SLACK_WEBHOOK_URL = self._get_slack_webhook()\n",
     "\n",
@@ -101,20 +96,15 @@
     "        if not self.SLACK_ENABLED:\n",
     "            return None\n",
     "        try:\n",
-    "            scopes = [\"shared-scope\", \"dev-scope\", \"prod-scope\", \"ml-scope\"]\n",
-    "            for s in scopes:\n",
-    "                try:\n",
-    "                    return dbutils.secrets.get(s, \"SLACK_WEBHOOK_URL\")\n",
-    "                except:\n",
-    "                    pass\n",
-    "            return None\n",
+    "            return dbutils.secrets.get(\"shared-scope\", \"SLACK_WEBHOOK_URL\")\n",
     "        except:\n",
     "            return None\n",
     "\n",
     "config = Config()\n",
     "\n",
-    "# ================== SLACK HANDLER ==================\n",
-    "\n",
+    "# -----------------------------------------\n",
+    "# 3️⃣ Slack Notification Helper\n",
+    "# -----------------------------------------\n",
     "class SlackNotifier:\n",
     "    def __init__(self, url):\n",
     "        self.url = url\n",
@@ -135,8 +125,9 @@
     "\n",
     "slack = SlackNotifier(config.SLACK_WEBHOOK_URL)\n",
     "\n",
-    "# ================== CLIENT INIT ==================\n",
-    "\n",
+    "# -----------------------------------------\n",
+    "# 4️⃣ Init Clients\n",
+    "# -----------------------------------------\n",
     "print(\"\\n🔧 Initializing Clients...\")\n",
     "try:\n",
     "    w = WorkspaceClient()\n",
@@ -147,8 +138,10 @@
     "    slack.send(\"Client Init Failed\", \"error\", {\"Reason\": str(e)})\n",
     "    dbutils.notebook.exit(\"FAILURE\")\n",
     "\n",
-    "# ================== MODEL FETCH ==================\n",
     "\n",
+    "# -----------------------------------------\n",
+    "# 5️⃣ Fetch Production Model Version\n",
+    "# -----------------------------------------\n",
     "def get_production_version():\n",
     "    try:\n",
     "        mv = client.get_model_version_by_alias(config.MODEL_NAME, config.PRODUCTION_ALIAS)\n",
@@ -156,8 +149,10 @@
     "    except:\n",
     "        return None\n",
     "\n",
-    "# ================== ENDPOINT HANDLING ==================\n",
     "\n",
+    "# -----------------------------------------\n",
+    "# 6️⃣ Check if Endpoint Exists\n",
+    "# -----------------------------------------\n",
     "def check_endpoint_exists(name):\n",
     "    try:\n",
     "        w.serving_endpoints.get(name=name)\n",
@@ -165,6 +160,10 @@
     "    except:\n",
     "        return False\n",
     "\n",
+    "\n",
+    "# -----------------------------------------\n",
+    "# 7️⃣ Deploy Endpoint (Create / Update)\n",
+    "# -----------------------------------------\n",
     "def deploy_endpoint(version, exists):\n",
     "    served = ServedEntityInput(\n",
     "        entity_name=config.MODEL_NAME,\n",
@@ -189,24 +188,36 @@
     "        slack.send(\"Deployment Failed\", \"error\", {\"Reason\": str(e)})\n",
     "        return False\n",
     "\n",
-    "def wait_ready(version):\n",
+    "# -----------------------------------------\n",
+    "# 🆕 8️⃣ WAIT FOR READY STATE (ADDED LOGIC)\n",
+    "# -----------------------------------------\n",
+    "def wait_until_ready():\n",
+    "    slack.send(\"Waiting for endpoint to become READY\", \"info\")\n",
     "    start = time.time()\n",
+    "\n",
     "    while time.time() - start < config.DEPLOYMENT_TIMEOUT:\n",
     "        ep = w.serving_endpoints.get(name=config.ENDPOINT_NAME)\n",
-    "        if \"READY\" in str(ep.state.ready):\n",
-    "            duration = round(time.time() - start,2)\n",
-    "            slack.send(\"Serving Endpoint Ready\", \"rocket\", {\"Version\": version, \"Time\": f\"{duration}s\"})\n",
+    "\n",
+    "        if \"READY\" in str(ep.state.ready) and \"NOT_UPDATING\" in str(ep.state.config_update):\n",
+    "            slack.send(\"Serving Endpoint Ready\", \"rocket\", {\n",
+    "                \"Endpoint\": config.ENDPOINT_NAME,\n",
+    "                \"Wait Time\": f\"{round(time.time() - start,2)} sec\"\n",
+    "            })\n",
     "            return True\n",
+    "\n",
     "        time.sleep(config.STATUS_CHECK_INTERVAL)\n",
+    "\n",
     "    slack.send(\"Timeout Waiting For Endpoint\", \"error\")\n",
     "    return False\n",
     "\n",
-    "# ================== MAIN ==================\n",
     "\n",
+    "# -----------------------------------------\n",
+    "# 9️⃣ MAIN PIPELINE\n",
+    "# -----------------------------------------\n",
     "def main():\n",
     "    version = get_production_version()\n",
     "    if not version:\n",
-    "        slack.send(\"No Production Model Found\", \"error\")\n",
+    "        slack.send(\"❌ No Production Model Found\", \"error\")\n",
     "        return \"FAILURE\"\n",
     "\n",
     "    exists = check_endpoint_exists(config.ENDPOINT_NAME)\n",
@@ -214,14 +225,17 @@
     "    if not deploy_endpoint(version, exists):\n",
     "        return \"FAILURE\"\n",
     "\n",
-    "    if not wait_ready(version):\n",
+    "    # 🔥 NEW: Wait until READY\n",
+    "    if not wait_until_ready():\n",
     "        return \"FAILURE\"\n",
     "\n",
-    "    slack.send(\"Deployment Completed\", \"success\", {\"Endpoint\": config.ENDPOINT_NAME, \"Version\": version})\n",
+    "    slack.send(\"Deployment Completed Successfully\", \"success\")\n",
     "    return \"SUCCESS\"\n",
     "\n",
-    "# ================== RUN ==================\n",
     "\n",
+    "# -----------------------------------------\n",
+    "# 🔟 RUN\n",
+    "# -----------------------------------------\n",
     "result = main()\n",
     "try:\n",
     "    dbutils.notebook.exit(result)\n",
