--- a/prod_env/prod_inference.ipynb
+++ b/prod_env/prod_inference.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🚀 PRODUCTION BATCH INFERENCE - NEW WORKFLOW (CONFIG DRIVEN)\n",
+    "# 🚀 PRODUCTION BATCH INFERENCE \n",
     " \n",
     "from databricks.sdk import WorkspaceClient\n",
     "from pyspark.sql import SparkSession\n",
@@ -143,6 +143,11 @@
     "print(\"\\n📦 Preparing output results...\")\n",
     "\n",
     "df[\"prediction\"] = predictions\n",
+    "\n",
+    "# 🔥 Added - convert prediction to YES/NO human readable\n",
+    "label_mapping = {0: \"No\", 1: \"Yes\"}\n",
+    "df[\"prediction_label\"] = df[\"prediction\"].map(label_mapping)\n",
+    "\n",
     "df[\"prediction_timestamp\"] = datetime.now()\n",
     "df[\"model_type\"] = MODEL_TYPE.upper()\n",
     "df[\"endpoint\"] = ENDPOINT_NAME\n",
@@ -167,8 +172,9 @@
     "if LABEL in df.columns:\n",
     "    print(\"\\n📊 Evaluating model performance (Classification)...\")\n",
     "\n",
-    "    y_true = df[LABEL].values\n",
-    "    y_pred = df[\"prediction\"].values\n",
+    "    # 🔧 FIX seed true labels to match 0/1 type\n",
+    "    y_true = df[LABEL].replace({\"no\": 0, \"yes\": 1}).astype(int)\n",
+    "    y_pred = df[\"prediction\"].astype(int)\n",
     "\n",
     "    metrics = {\n",
     "        \"accuracy\": accuracy_score(y_true, y_pred),\n",
