--- a/prod_env/prod_inference.ipynb
+++ b/prod_env/prod_inference.ipynb
@@ -144,9 +144,13 @@
     "\n",
     "df[\"prediction\"] = predictions\n",
     "\n",
-    "# 🔥 Added - convert prediction to YES/NO human readable\n",
+    "# 🔧 Ensure prediction is integer before converting\n",
+    "df[\"prediction\"] = pd.to_numeric(df[\"prediction\"], errors=\"coerce\").astype(\"Int64\")\n",
+    "\n",
+    "# 🔥 Convert prediction to human readable Yes/No\n",
     "label_mapping = {0: \"No\", 1: \"Yes\"}\n",
     "df[\"prediction_label\"] = df[\"prediction\"].map(label_mapping)\n",
+    "\n",
     "\n",
     "df[\"prediction_timestamp\"] = datetime.now()\n",
     "df[\"model_type\"] = MODEL_TYPE.upper()\n",
